sumo/tests/traci/get_variable/ArealDetector/errors/UnsupportedVariable/testclient.prog
simstep2 48
getvariable 0x8e 0xff dummy
simstep2 49
